Add support for selecting a level